<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar_Comercio">

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="367dp"
        android:layout_height="381dp"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="-100dp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle2" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="93dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="ClickBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowback" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="177dp"
        android:layout_height="188dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-85dp"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/radius" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="-130dp"
        android:alpha="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/circle3" />

    <Button
        android:id="@+id/btnModificarInformacionLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#CD1D1D"
        android:text="@string/EliminarCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="441dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/NombreComercio"
                android:inputType="textPersonName"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewCUIL"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/CuilComercio"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/MailComercio"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextDireccion"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/DireccionComercio"
                android:inputType="textPersonName"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/ContraseñaComercio"
                android:inputType="textPersonName|textPassword"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/ContraseñaConfirmComercio"
                android:inputType="textPersonName|textPassword"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imgViewComercioEdit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:background="@color/Secondary" />

            <Button
                android:id="@+id/btnSeleccionarImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/SeleccionarFoto" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comercio" />

</androidx.constraintlayout.widget.ConstraintLayout>