<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtNombreUsuario_Cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView38"
            android:layout_width="367dp"
            android:layout_height="381dp"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="-100dp"
            android:alpha="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle2" />

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="177dp"
            android:layout_height="188dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="-85dp"
            android:alpha="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/radius" />

        <ImageView
            android:id="@+id/imageView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-200dp"
            android:layout_marginBottom="-130dp"
            android:alpha="0.85"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/circle3" />

        <Button
            android:id="@+id/btnModificarUsuario_Cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="20dp"

            android:text="@string/Modificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

        <Button
            android:id="@+id/btnEliminarCuenta_Cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="120dp"
            android:backgroundTint="#CD1D1D"
            android:text="Eliminar cuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="364dp"
            android:layout_marginTop="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNombre_usuario"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/NombreUsu"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtApellido_usuario"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/ApellidoUsuario"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtNombre_Cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/NombreUsuario"
                    android:inputType="textPersonName"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtEmail_Cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/MailComercio"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtDireccion_Cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/DireccionComercio"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtContraseña_Cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/ContraseñaComercio"
                    android:inputType="textPersonName"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtContraseñaValidar_cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/ContraseñaComercio"
                    android:inputType="textPersonName"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtSexo_Cuenta"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/SexoUsuario"
                    android:textAlignment="center"
                    android:textSize="20dp" />


            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>