<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar_Usuario">

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="367dp"
        android:layout_height="381dp"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="-100dp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle2" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="93dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:onClick="ClickBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowback" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="177dp"
        android:layout_height="188dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-85dp"
        android:alpha="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/radius" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-200dp"
        android:layout_marginBottom="-130dp"
        android:alpha="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/circle3" />

    <Button
        android:id="@+id/btnModificarUsuario_Cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"

        android:text="@string/Modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <Button
        android:id="@+id/btnEliminarCuenta_Cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="120dp"
        android:text="Eliminar cuenta"
        android:backgroundTint="#CD1D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="409dp"
        android:layout_height="402dp"
        android:layout_marginTop="192dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre_cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/NombreUsu"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtApellido_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/ApellidoUsuario"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtNombreUsuario_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/NombreUsuario"
                android:inputType="textPersonName"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtEmail_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/MailComercio"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtDireccion_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/DireccionComercio"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtContraseña_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/ContraseñaComercio"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtVericarContraseña_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Repetir Contraseña"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/txtSexo_Cuenta"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/SexoUsuario"
                android:textAlignment="center"
                android:textSize="20dp" />
            <!--
            <Spinner
                android:id="@+id/spnTarjetas"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                -->

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>