<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUsuario">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="391dp"
        android:layout_height="475dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="508dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="317dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="-170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="492dp"
        android:layout_marginStart="-230dp"
        android:layout_marginTop="-200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/radius" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="190dp"
        android:layout_height="227dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/txtRecuperoPsswU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="@string/OlvidarContraseña"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistroU" />

    <ImageView
        android:id="@+id/btnAtras"
        android:layout_width="98dp"
        android:layout_height="67dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="4dp"
        android:onClick="ClickBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowback" />

    <EditText
        android:id="@+id/txtContraseñaU"
        android:layout_width="303dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/ContraseñaComercio"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreU" />

    <EditText
        android:id="@+id/txtNombreU"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/NombreUsuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistroU"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="Registro"
        android:text="@string/Registro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresoU" />

    <Button
        android:id="@+id/btnIngresoU"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="IniciarSesion"
        android:text="@string/Ingreso"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseñaU" />

</androidx.constraintlayout.widget.ConstraintLayout>